# rat

./: .gitignore  Cargo.toml  README.md  Taskfile.yml
src/: lib.rs
